RESOLVED FIXED261547
Regression(262976@main) Images do not show in Microsoft Word Online
https://bugs.webkit.org/show_bug.cgi?id=261547
Summary Regression(262976@main) Images do not show in Microsoft Word Online
Chris Dumez
Reported 2023-09-13 22:10:27 PDT
Extend the quirk added in 267969@main to cover more cases.
Attachments
Chris Dumez
Comment 1 2023-09-13 22:11:18 PDT
Chris Dumez
Comment 2 2023-09-13 22:13:11 PDT
EWS
Comment 3 2023-09-14 08:14:32 PDT
Committed 267987@main (e590fea7147d): <https://commits.webkit.org/267987@main> Reviewed commits have been landed. Closing PR #17765 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.