Regression(262976@main) Images do not show in Microsoft Word Online https://bugs.webkit.org/show_bug.cgi?id=261547 rdar://114573089

Reviewed by Wenson Hsieh.

Extend the quirk added in 267969@main to cover more cases, after further
testing by Karl Dubost.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::shouldDisableDataURLPaddingValidation const):

Canonical link: https://commits.webkit.org/267987@main